Bugfix, UDP protocol

--- a/Need For Speed II SE/nfs2se.conf
+++ b/Need For Speed II SE/nfs2se.conf
@@ -43,6 +43,10 @@
 #	1 - Linear interpolated sound to 44100Hz (artificial highs)
 #UseGlBleginGlEnd:
 #	Use glBegin(), glEnd() instead of glDrawArrays() - can be slower, disabled by default
+#Port1:
+#	TCP and UDP port (default: 1030)
+#Port2:
+#	Second UDP port for host (default: 1029)
 #LinuxCOM1, LinuxCOM2, LinuxCOM3, LinuxCOM4:
 #	Full path to serial port device (ex. /dev/ttyS0)
 
@@ -61,6 +65,8 @@ StartAtFullScreen=1
 #Joystick1Buttons=0,15,16,3,4,5,6,7,-1,-1,10,11,12,13,14
 #LinearSoundInterpolation=1
 #UseGlBleginGlEnd=0
+#Port1=1030
+#Port2=1029
 LinuxCOM1=/dev/ttyS0
 LinuxCOM2=/dev/ttyS1
 LinuxCOM3=/dev/ttyUSB0
