--- a/Need For Speed II SE/nfs2se.conf
+++ b/Need For Speed II SE/nfs2se.conf
@@ -47,6 +47,8 @@
 #	TCP and UDP port (default: 1030)
 #Port2:
 #	Second UDP port for host (default: 1029)
+#Bcast:
+#	Broadcast address for UDP connection (default: 255.255.255.255)
 #LinuxCOM1, LinuxCOM2, LinuxCOM3, LinuxCOM4:
 #	Full path to serial port device (ex. /dev/ttyS0)
 
@@ -67,6 +69,7 @@ StartAtFullScreen=1
 #UseGlBleginGlEnd=0
 #Port1=1030
 #Port2=1029
+#Bcast=255.255.255.255
 LinuxCOM1=/dev/ttyS0
 LinuxCOM2=/dev/ttyS1
 LinuxCOM3=/dev/ttyUSB0
