Improvements, bug fixes, assembly code cleanups
This patch also allows to use only one cpu core (can be more stable).

--- a/Need For Speed II SE/nfs2se.conf
+++ b/Need For Speed II SE/nfs2se.conf
@@ -3,6 +3,9 @@
 #Press Alt+Enter to toggle full screen.
 #Leave empty line at the end of file!
 
+#UseOnlyOneCPU:
+#	0 - The game can use more than one CPU (can be unstable)
+#	1 - The game can use only the first CPU (can be more stable, default)
 #StartFullScreen:
 #	0 - The game runs in window
 #	1 - The game runs in full screen
@@ -52,6 +55,7 @@
 #LinuxCOM1, LinuxCOM2, LinuxCOM3, LinuxCOM4:
 #	Full path to serial port device (ex. /dev/ttyS0)
 
+#UseOnlyOneCPU=1
 StartAtFullScreen=1
 #VSync=-1
 #MSAA=4
