Better mouse handling - absolute position

--- a/Need For Speed II SE/nfs2se.conf
+++ b/Need For Speed II SE/nfs2se.conf
@@ -1,13 +1,12 @@
 #This is "Need For Speed II SE" wrapper configuration file.
-#Press Ctrl+Enter to grab/ungrab mouse in windowed mode.
 #Press Alt+Enter to toggle full screen.
 #Leave empty line at the end of file!
 
 #UseOnlyOneCPU:
 #	0 - The game can use more than one CPU (can be unstable)
 #	1 - The game can use only the first CPU (can be more stable, default)
-#StartFullScreen:
-#	0 - The game runs in window
+#StartAtFullScreen:
+#	0 - The game runs in window (default)
 #	1 - The game runs in full screen
 #VSync:
 #	-1 - Don't change
