Update comments in config file

--- a/Need For Speed II SE/nfs2se.conf
+++ b/Need For Speed II SE/nfs2se.conf
@@ -1,5 +1,6 @@
 #This is "Need For Speed II SE" wrapper configuration file.
-#Press Alt+Enter to toggle full screen.
+#On Linux be sure that you are editing configuration inside home directory (created during the first run): "~/.nfs2se/nfs2se.conf"!
+#Press Alt+Enter in the game to toggle full screen.
 #Leave empty line at the end of file!
 
 #UseOnlyOneCPU:
