--- a/Need For Speed II SE/nfs2se.conf
+++ b/Need For Speed II SE/nfs2se.conf
@@ -22,6 +22,9 @@
 #	1 - Use screen size from "WindowSize"
 #WindowSize:
 #	Type your own window size (default: 640x480)
+#KeepAspectRatio:
+#	0 - Fills the entire window
+#	1 - Keeps the original aspect ratio (4:3, default)
 #MouseAsJoystick:
 #	0 - Normal mouse mode (default)
 #	1 - Use mouse as first joystick (2 axes, 5 buttons)
@@ -61,6 +64,7 @@ StartAtFullScreen=1
 #MSAA=4
 #UseWindowSizeForFullscreen=0
 #WindowSize=640x480
+#KeepAspectRatio=1
 #MouseAsJoystick=0
 #MouseJoySensitivity=20
 #Joystick0AxisValueShift=8448
