--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
+Need For Speed II SE/gamedata
+Need For Speed II SE/fedata
 Need For Speed II SE/nfs2se
-Need For Speed II SE/nfs2se.exe
+Need For Speed II SE/*.dll
+Need For Speed II SE/*.exe
+Need For Speed II SE/*.so
+Need For Speed II SE/*.o
