Add notice about swap interval in nfs2se.conf.template
It is possible since 433976a3453bb2e880e1554c9c4a6d193a9e494c

--- a/Need For Speed II SE/nfs2se.conf.template
+++ b/Need For Speed II SE/nfs2se.conf.template
@@ -14,6 +14,7 @@
 #	-1 - Don't change
 #	 0 - VSync disabled
 #	 1 - VSync enabled (default)
+#	>1 - VSync enabled, limit the framerate
 #MSAA (Multisample antialiasing):
 #	0 - Don't change (default)
 #	1 - Disable MSAA
