Add comment to *.desktop file

--- a/Need For Speed II SE/nfs2se.desktop
+++ b/Need For Speed II SE/nfs2se.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=Need For Speed II SE
+Comment=Cross-platform port of the Need For Speed™ II SE game with 3D acceleration and TCP protocol!
 Type=Application
 Terminal=false
 Icon=nfs2se
