--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Need For Speed II SE/*.dll
 Need For Speed II SE/*.exe
 Need For Speed II SE/*.so
 Need For Speed II SE/*.o
+src/NFS2SE.asm
+src/game-obj/
