--- a/src/Android/AndroidManifest.xml.in
+++ b/src/Android/AndroidManifest.xml.in
@@ -6,19 +6,21 @@
       android:versionName="@VERSION@"
       android:installLocation="auto">
 
-    <!-- Android 2.3.3 -->
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="12" />
+    <!-- Android 4.0.1 -->
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="16" />
 
     <!-- OpenGL ES 2.0 -->
     <uses-feature android:glEsVersion="0x00020000" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application android:label="@string/app_name"
                  android:icon="@drawable/nfs2se"
                  android:allowBackup="true"
-                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+                 android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                 android:hardwareAccelerated="true" >
         <activity android:name="NFSIISE"
                   android:label="@string/app_name"
                   android:configChanges="keyboardHidden|orientation"
