--- a/Need For Speed II SE/nfs2se.conf.template
+++ b/Need For Speed II SE/nfs2se.conf.template
@@ -33,10 +33,10 @@
 #Joystick1AxisValueShift:
 #	Specify the number to shift value for the first axis in second joystick (simple deadzone compensation)
 #Joystick0Axes:
-#	Specify which axes will be used in game for first joystick. NFS2SE supports only 4 axes (ex. 0,1,2,3:0,0,0,0)
+#	Specify which axes will be used in game for first joystick. NFS2SE supports only 4 axes (e.g. 0,12,13,14:0,1,1,1 or 0,1,4,5:0,0,0,0 or 0,1,2,5:0,0,0,0)
 #	The numbers after colon chooses axis type (0 - normal axis, 1 - half axis, -1 - inverted half axis)
 #Joystick1Axes:
-#	Specify which axes will be used in game for second joystick. NFS2SE supports only 4 axes (ex. 0,12,13,14:0,1,1,1)
+#	Specify which axes will be used in game for second joystick. NFS2SE supports only 4 axes.
 #	The numbers after colon chooses axis type (0 - normal axis, 1 - half axis, -1 - inverted half axis)
 #Joystick0Buttons:
 #	Specify which buttons will be used in game for first joystick. Value less than 0 - disabled. NFS2SE supports 15 buttons
@@ -61,7 +61,7 @@
 #Bcast:
 #	Broadcast address for UDP connection (default: 255.255.255.255)
 #LinuxCOM1, LinuxCOM2, LinuxCOM3, LinuxCOM4:
-#	Full path to serial port device (ex. /dev/ttyS0)
+#	Full path to serial port device (e.g. /dev/ttyS0)
 
 #UseOnlyOneCPU=1
 #StartInFullScreen=1
@@ -72,10 +72,10 @@
 #KeepAspectRatio=1
 #Joystick0AxisValueShift=8448
 #Joystick1AxisValueShift=8448
-#Joystick0Axes=0,12,13,14:0,1,1,1
-#Joystick1Axes=0,12,13,14:0,1,1,1
-#Joystick0Buttons=0,15,16,3,4,5,6,7,-1,-1,-1,11,12,13,14
-#Joystick1Buttons=0,15,16,3,4,5,6,7,-1,-1,-1,11,12,13,14
+#Joystick0Axes=0,1,2,3:0,0,0,0
+#Joystick1Axes=0,1,2,3:0,0,0,0
+#Joystick0Buttons=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14
+#Joystick1Buttons=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14
 #Joystick0EscButton=-1
 #UseSpringForceFeedbackEffect=0
 #ForceFeedbackDevice=-1
