--- a/Need For Speed II SE/nfs2se.conf.template
+++ b/Need For Speed II SE/nfs2se.conf.template
@@ -44,6 +44,9 @@
 #	Specify which buttons will be used in game for second joystick. Value less than 0 - disabled. NFS2SE supports 15 buttons
 #Joystick0EscButton:
 #	Specify which button will be used as Escape key
+#UseHapticPolar:
+#	0 - Use SDL_HAPTIC_STEERING_AXIS
+#	1 - Use SDL_HAPTIC_POLAR
 #UseSpringForceFeedbackEffect:
 #	0 - Don't use Spring Force Feedback Effect (default)
 #	1 - Use Spring Force Feedback Effect (experimental)
@@ -77,6 +80,7 @@
 #Joystick0Buttons=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14
 #Joystick1Buttons=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14
 #Joystick0EscButton=-1
+#UseHapticPolar=0
 #UseSpringForceFeedbackEffect=0
 #ForceFeedbackDevice=-1
 #LinearSoundInterpolation=1
