--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,7 @@ Need For Speed II SE/*.dll
 Need For Speed II SE/*.exe
 Need For Speed II SE/*.so
 src/*.o
-src/Android/jni/SDL/include
-src/Android/jni/SDL/src
-src/Android/libs
-src/Android/bin
-src/Android/gen
-src/Android/obj
-src/Android/src/org/libsdl
-src/Android/AndroidManifest.xml
-src/Android/build.xml
-src/Android/local.properties
-src/Android/proguard-project.txt
-src/Android/project.properties
+src/Android/.gradle
+src/Android/app/build
+src/Android/app/jni/SDL
+src/Android/app/src/main/AndroidManifest.xml
