OpenGL: Use framebuffer in GL(ES)2, fixes, code refactor
OpenGL(ES) 2 changes:
- render to texture,
- rename "UseWindowSizeForFullScreen" to "FixedRenderingSize",
- change framebuffer size instead of screen resolution for
"FixedRenderingSize" option,
- fix gamma in some locations (#68, apply gamma in post-processing),
- MSAA is no longer available for OpenGL(ES) 2,
- fix textures brightness due to incorrect texture format conversion,
- fix triple-buffering flickering in some menu animations or loading
screen,
- some code refactor,

Also apply some changes to OpenGL 1.

--- a/Need For Speed II SE/nfs2se.conf.template
+++ b/Need For Speed II SE/nfs2se.conf.template
@@ -18,13 +18,16 @@
 #	 0 - VSync disabled
 #	 1 - VSync enabled (default)
 #	>1 - VSync enabled, limit the framerate
-#MSAA (Multisample antialiasing):
+#MSAA (Multisample antialiasing, OpenGL 1 only):
 #	0 - Don't change (default)
 #	1 - Disable MSAA
 #	2, 4, 8, 16 - Enable MSAA. If not supported, the game probably won't run.
-#UseWindowSizeForFullScreen:
-#	0 - Don't change screen size (default)
-#	1 - Use screen size from "WindowSize"
+#FixedRenderingSize:
+#	0 - Window size determines game rendering size (default)
+#	1 - Fixed game rendering size (value is specified in "WindowSize"):
+#			- OpenGL 1     - window has fixed size, full screen will change screen resolution
+#			- OpenGL(ES) 2 - framebuffer has fixed size
+#	2 - Same as "1", but OpenGL(ES) 2 renderer doesn't use linear image upscaling
 #WindowSize:
 #	Type your own window size (default: 640x480)
 #KeepAspectRatio:
@@ -61,7 +64,7 @@
 #	0 - Original samplerate - 22050Hz (default)
 #	1 - Linear interpolated sound to 44100Hz (artificial highs)
 #UseGlBleginGlEnd:
-#	Use glBegin(), glEnd() instead of glDrawArrays() - can be slower, disabled by default
+#	Use glBegin(), glEnd() instead of glDrawArrays() in OpenGL 1 - can be slower, disabled by default
 #Port1:
 #	TCP and UDP port (default: 1030)
 #Port2:
@@ -75,7 +78,7 @@
 #StartInFullScreen=1
 #VSync=-1
 #MSAA=4
-#UseWindowSizeForFullScreen=0
+#FixedRenderingSize=1
 #WindowSize=640x480
 #KeepAspectRatio=1
 #LinearTextureFiltering=1
