--- a/Need For Speed II SE/nfs2se.conf.template
+++ b/Need For Speed II SE/nfs2se.conf.template
@@ -37,9 +37,9 @@
 #	0 - Nearest texture filtering
 #	1 - Linear texture filtering (defailt)
 #Joystick0AxisValueShift:
-#	Specify the number to shift value for the first axis in first joystick (simple deadzone compensation)
+#	Specify the number to shift value for the first axis in first joystick (simple deadzone compensation, default: 3072 for gamepad, 6144 for wheel)
 #Joystick1AxisValueShift:
-#	Specify the number to shift value for the first axis in second joystick (simple deadzone compensation)
+#	Specify the number to shift value for the first axis in second joystick (see above)
 #Joystick0Axes2:
 #	Specify which axes will be used in game for first joystick. NFS2SE supports only 6 axes (e.g. 0,12,13,14,-1,-1:0,1,1,1,0,0)
 #	The numbers after colon chooses axis type (0 - normal axis, 1 - half axis, -1 - inverted half axis)
@@ -82,8 +82,8 @@
 #WindowSize=640x480
 #KeepAspectRatio=1
 #LinearTextureFiltering=1
-#Joystick0AxisValueShift=8448
-#Joystick1AxisValueShift=8448
+#Joystick0AxisValueShift=0
+#Joystick1AxisValueShift=0
 #Joystick0Axes2=0,1,2,3,4,5:0,0,0,0,0,0
 #Joystick1Axes2=0,1,2,3,4,5:0,0,0,0,0,0
 #Joystick0EscButton=-1
